--- a/project-ignite.html
+++ b/project-ignite.html
@@ -84,7 +84,7 @@
 <div class="image-box">
   <div 
     class="image-box__background" 
-    style="filter: blur(4px);--image-url: url(img/dog-bg-1.jpg);"
+    style="filter: blur(4px);--image-url: url(img/sick-dog.png);"
   ></div>
   <div class="image-box__overlay"></div>
   <div class="image-box__content bg-text">
