--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@
           <img src="img/image-5.png" alt="" style="width:100%;">
         </div>
 
+        <div class="item">
+          <img src="img/image-6.jpg" alt="" style="width:100%;">
+        </div>
+
+<div class="item">
+          <img src="img/image-7.jpg" alt="" style="width:100%;">
+        </div>
+
+<div class="item">
+          <img src="img/image-8.jpg" alt="" style="width:100%;">
+        </div>
+
       </div>
 
       <!-- Left and right controls -->
@@ -141,7 +153,7 @@
           <br>
         <div class="card-box">
        <div class="example1">
-       <h3>Order your food with Chewy and they'll proudly donate $20 to Paw Salvation Inc.. </h3>
+       <h3>Project Ignite Coming Soon... </h3>
      </div>
        </div>
 
