--- a/index.html
+++ b/index.html
@@ -405,10 +405,6 @@
         <div class="col-sm-4 edoja-color">
           <p class="h3 respect font-weight-bold d-inline">PAW SALVATION</p>
           <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="about.html">About Paw Salvation</a> </p>
-          <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">Policy</a></p>
-          <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">pet care topics</a> </p>
-          <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">sitemap</a></p>
-          <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">privacy policy</a> </p>
           <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">about our ads</a> </p>
         </div>
         <div class="col-sm-1">
@@ -448,7 +444,7 @@
         <div class="col-sm-4 edoja-color">
           <div class="">
             <ul class="social-icons">
-              <li><a href="https://www.facebook.com/pawsalvatn" target="_blank"><img
+              <li><a href="https://facebook.com/Pawsalvationinc/" target="_blank"><img
                     src="https://cdn2.iconfinder.com/data/icons/social-flat/512/facebook-128.png" width="32px;"
                     height="32px;"></a></li>
               <li><a href="https://twitter.com/PawSalvation" target="_blank"><img
