--- a/about.html
+++ b/about.html
@@ -91,15 +91,8 @@
      <center><p class="h1">ABOUT</p></center>
                             
                              <br>
-                             <div class="video-poster text-center">
-                              <video poster="" controls="" width="205" height="400">
-                                  <source src="movie.mp4" type="video/mp4">
-                                  <source src="movie.ogg" type="video/ogg">
-                                  Your browser does not support the video tag.
-                               </video>
-                        </div>
-        <br>                
-                             <p class="h4 text-justify">
+                             
+                             <p class="h4 text-justify about-page">
                               <b>PAW SALVATION INC</b> is a nonprofit organization with its 501(c)3 tax-exempt status, our sole aim is to help care for the homeless people who own pets . Caring for this pets gives the homeless person one less thing to worry about when it comes to welfare of his or her companion . We are fully aware of the emotional support this pets provide for this homeless individuals as such we are devoted to ensure that this unique bond is preserved . We also care for our <b>SENIORS</b> and <b>VETERANS</b> who own pets and need some sort of assistance with up keep of their pets understanding the attachments.
                               <br><br>
                               In this regard <b>PAW SALVATION INC</b> goes out to the streets downtown , alleyways and corners to search and provide for this homeless individuals pets with <b>FOOD , TOYS , TREATS & COMFORTABLY BEDDING</b> for their pets . And for the seniors and veterans we go by their homes and drop off food, toys and treats and make sure their pets are doing just fine .. and in no distant time we would be providing vet care assistance for them as well knowing healthy meals alone doesn’t cut it. We go out once a week to provide meals for the homeless pets understanding they do not have storage so we always have to go out every other week so we not only replenish the pets meals but also check up on them and their furry baby making sure they are okay.
@@ -119,10 +112,6 @@
               <div class="col-sm-4 edoja-color">
                  <p class="h3 respect font-weight-bold d-inline">PAW SALVATION</p>  
                   <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="about.html">About Paw Salvation</a>   </p>
-                  <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">Policy</a></p> 
-                    <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">pet care topics</a>   </p>
-                  <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">sitemap</a></p>
-                  <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">privacy policy</a>   </p>
                   <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">about our ads</a>   </p>
               </div>
               <div class="col-sm-1">
@@ -164,7 +153,7 @@
               <div class="col-sm-4 edoja-color">
                   <div class="">
                       <ul class="social-icons">
-                          <li><a href="https://www.facebook.com/pawsalvatn" target="_blank"><img src="https://cdn2.iconfinder.com/data/icons/social-flat/512/facebook-128.png" width="32px;" height="32px;"></a></li>
+                          <li><a href="https://facebook.com/Pawsalvationinc/" target="_blank"><img src="https://cdn2.iconfinder.com/data/icons/social-flat/512/facebook-128.png" width="32px;" height="32px;"></a></li>
                           <li><a href="https://twitter.com/PawSalvation" target="_blank"><img src="https://cdn2.iconfinder.com/data/icons/social-flat/512/twitter-128.png" width="32px" height="32px;"></a></li>
                           <li><a href="" target="_blank"><img src="https://cdn2.iconfinder.com/data/icons/social-flat/512/youtube-128.png" width="32px" height="32px;"></a></li>
                           <li><a href="https://www.instagram.com/pawsalvation/" target="_blank"><img src="https://cdn2.iconfinder.com/data/icons/social-flat/512/instagram-128.png" width="32px" height="32px;"></a></li>
