Added volunteer form

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
         <div class="image-box__content bg-text">
 
             <center>
-                <p class="h1">ABOUT</p>
+                <p class="h1 font-weight-bold">ABOUT</p>
             </center>
 
             <br>
@@ -118,6 +118,7 @@
                     <p class="h3 respect font-weight-bold d-inline">PAW SALVATION</p>
                     <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="about.html">About Paw Salvation</a> </p>
                     <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">about our ads</a> </p>
+                    <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="volunteer.html">Volunteer</a> </p>
                 </div>
                 <div class="col-sm-1">
                 </div>
