--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
                     <p class="h3 respect font-weight-bold d-inline">PAW SALVATION</p>
                     <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="about.html">About Paw Salvation</a> </p>
                     <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="">about our ads</a> </p>
+                    <p class="h5 d-inline up-case" style="margin-top: 2rem;"><a href="volunteer.html">Volunteer</a> </p>
                 </div>
                 <div class="col-sm-1">
                 </div>
