add volunteer form

--- a/volunteer.html
+++ b/volunteer.html
@@ -163,7 +163,7 @@
 
 
 
-                            <button id="checkout-button" type="submit" class="button button-block overlay" style="margin: auto;padding: auto;">Register <script>if (sessionStorage.getItem('checkoutid') === null)sessionStorage.getItem("frequency") == 1 ? document.write(" ") : document.write("");  </script></button>
+                            <button id="checkout-button" type="submit" class="button button-block overlay" style="margin: auto;padding: auto;">Register</button>
 
                         </form>
 
