add volunteer form

--- a/volunteer.html
+++ b/volunteer.html
@@ -126,16 +126,16 @@
 
                             <div class="field-wrap">
                                 <label>
-                Social Media Handle<span class="req">*</span>
+                Social Media Handle<span class="req"></span>
               </label>
-                                <input type="text" id="social-media" required autocomplete="off" />
+                                <input type="text" id="social-media" autocomplete="off" />
                             </div>
 
                             <div class="field-wrap">
                                 <label>
-                  Occupation<span class="req">*</span>
+                  Occupation<span class="req"></span>
                 </label>
-                                <input type="text" id="occupation" required autocomplete="off" />
+                                <input type="text" id="occupation" autocomplete="off" />
                             </div>
 
                             <div class="field-wrap">
@@ -148,9 +148,9 @@
 
                             <div class="field-wrap">
                                 <label>
-                                    How did you hear about us <span class="req">*</span>
+                                    How did you hear about us <span class="req"></span>
                 </label>
-                                <input type="text" id="hear-us" required autocomplete="off" />
+                                <input type="text" id="hear-us" autocomplete="off" />
                             </div>
 
 
