--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <p class="text-black test"><span style="word-spacing: -6px;">Compassion for our four legged heroes is all we ask.</span></p>
 
                         <br>
-                        <p class="text-black h3" style="line-height: 2;"> Being homeless is psychologically stressful, But going through it with a furry companion gives HOPE... let’s help preserve the only companionship this homeless people have. </p>
+                        <p class="text-black h3" style="line-height: 2;"> Being homeless is psychologically stressful, But going through it with a furry companion gives HOPE... let’s help preserve the only companionship these homeless people have. </p>
                     </div>
 
                     <div class="text-center mt-50 md-50">
@@ -316,7 +316,7 @@
     <div class="container-fluid content mt-70 ">
 
 
-        <div id="carousel-example-generic " class="carousel slide " data-ride="carousel ">
+        <div id="carousel-example-generic" class="carousel slide " data-ride="carousel">
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner ">
@@ -377,9 +377,10 @@
                 </div>
 
             </div>
+
             <!-- Controls -->
-            <a class="left carousel-control " href="#carousel-example-generic " data-slide="prev "> <span class="glyphicon glyphicon-chevron-left "></span> </a>
-            <a class="right carousel-control " href="#carousel-example-generic " data-slide="next "> <span class="glyphicon glyphicon-chevron-right "></span> </a>
+            <a class="left carousel-control" href="#carousel-example-generic " data-slide="prev "> <span class="glyphicon glyphicon-chevron-left "></span> </a>
+            <a class="right carousel-control" href="#carousel-example-generic " data-slide="next "> <span class="glyphicon glyphicon-chevron-right "></span> </a>
         </div>
     </div>
     <footer id="footer">
