--- a/project-ignite.html
+++ b/project-ignite.html
@@ -97,9 +97,9 @@
             <br>
 
             <p class="h4 text-justify about-page">
-                It’s really not enough feeding this homeless people’s pets and caring for the seniors and veterans. Paw Salvation is looking to make this individuals self sufficient and in no distant time alleviate their living conditions and make them self sufficient.
-                <br><br> God gave each and everyone a gift most of us have discovered our gifts ( arts , painting etc ) this gifts where given to us so in a time of need this gifts will keep us afloat .
-                <br><br> Project Ignite is a program set up to dig a little deeper with this lovely people we care for and find out what each gift they have and harness it and monetize it by putting it up for auction and have people bid on this panting
+                It’s really not enough feeding these homeless people’s pets and caring for the seniors and veterans. Paw Salvation is looking to make these individuals self sufficient and in no distant time alleviate their living conditions and make them self sufficient.
+                <br><br> God gave each and everyone a gifts. Most of us have discovered our gifts ( arts , painting etc ) and this gifts were given to us so in a time of need this gifts will keep us afloat .
+                <br><br> Project Ignite is a program set up to dig a little deeper with these lovely people we care for and find out what each gift they have and harness it and monetize it by putting it up for auction and have people bid on this panting
                 or craft or something and money raised would be given to the creator and help the person expand his skills and produce more and in no time that creator becomes self sufficient enough to grow and change his life for good . That way we are
                 physiological encouraging this creator that he or she has the ability to crate and change his life and his environment. That action in its self will change the world .
             </p>
