--- a/about.html
+++ b/about.html
@@ -124,9 +124,7 @@
                 </div>
 
                 <div class="col-sm-5 edoja-color">
-                    <br>
-                    <p class="h5 line respect d-inline">Get the latest on our progress, sign up for the PawSalvation newsletter.</p>
-                    <br>
+                    <p class="h3 respect font-weight-bold d-inline">CONTACT</p>
                     <p class="h5 line respect d-inline">PO BOX 489 POSEN, IL 60469</p>
 
                     <p class="h5 d-inline">
