--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     <div class="container-fluid content mt-70 ">
 
 
-        <div id="carousel-example-generic" class="carousel slide " data-ride="carousel">
+        <div id="carousel-example" class="carousel slide " data-ride="carousel">
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner ">
@@ -379,8 +379,8 @@
             </div>
 
             <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-example-generic " data-slide="prev "> <span class="glyphicon glyphicon-chevron-left "></span> </a>
-            <a class="right carousel-control" href="#carousel-example-generic " data-slide="next "> <span class="glyphicon glyphicon-chevron-right "></span> </a>
+            <a class="left carousel-control" href="#carousel-example" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left "></span> </a>
+            <a class="right carousel-control" href="#carousel-example" data-slide="next"> <span class="glyphicon glyphicon-chevron-right "></span> </a>
         </div>
     </div>
     <footer id="footer">
@@ -397,10 +397,10 @@
                 </div>
 
                 <div class="col-sm-5 edoja-color">
-                    <br>
-                    <p class="h5 line respect d-inline">Get the latest on our progress, sign up for the PawSalvation newsletter.</p>
-                    <br>
-                    <p class="h5 line respect d-inline">PO BOX 489 POSEN, IL 60469</p>
+
+                    <p class="h3 respect font-weight-bold d-inline">CONTACT</p>
+
+                    <p class="h5 line respect d-inline" style="margin-top: 2rem;">PO BOX 489 POSEN, IL 60469</p>
 
                     <p class="h5 d-inline">
                         <a href="tel:+217518642">Phone number: +1 (217) 518 6428</a></p>
