--- a/project-ignite.html
+++ b/project-ignite.html
@@ -98,7 +98,7 @@
 
             <p class="h4 text-justify about-page">
                 It’s really not enough feeding these homeless people’s pets and caring for the seniors and veterans. Paw Salvation is looking to make these individuals self sufficient and in no distant time alleviate their living conditions and make them self sufficient.
-                <br><br> God gave each and everyone a gifts. Most of us have discovered our gifts ( arts , painting etc ) and these gifts were given to us so in a time of need this gifts will keep us afloat .
+                <br><br> God gave each and everyone a gift. Most of us have discovered our gifts ( arts , painting etc ) and these gifts were given to us so in a time of need this gifts will keep us afloat .
                 <br><br> Project Ignite is a program set up to dig a little deeper with the aim of finding out what skills homeless pet owners have. That way, we can help them harness their skills by channeling their gifts and skills into creative and
                 profitable endeavors.<br><br> The crafts, paintings and other items produced by the homeless will be put up for auction and the funds raised will be given to the creator under our mentoring. This will help in encouraging them to spend
                 more time on positive endeavors and give their lives a meaning.<br><br> That way, we are psychologically encouraging them to develop their ability to create and change their environment. That action in itself will change the world
