Added homepage card content

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                 <div class="card ">
                     <img src="img/new-bus-1.jpg " class="card-img-top " alt="... ">
                     <div class="card-body ">
-                        <h1 class="text-black mt-30 green my-text font-weight-bold ">Proposed Grooming Truck </h1>
-                        <p class="text-black h3 text-center ">Food alone doesn’t cut it ... These homeless pets also require a bath. No one knows how long ago they had a bath. And this would be VERY beneficial to the pet. All your donations will also go into buying this grooming van. </p>
+                        <h1 class="text-black mt-30 green my-text font-weight-bold ">STRAIGHT FROM THE HEART</h1>
+                        <p class="text-black h3 text-center "> We are going beyond just lifting the burden off homeless pet owners and their pets. Igniting their creativity and channeling it into a rewarding endeavor is our goal.</p>
                     </div>
                 </div>
             </div>
@@ -174,8 +174,8 @@
                 <div class="card">
                     <img src="img/bus-2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h1 class="text-black mt-30 green my-text font-weight-bold"> Proposed Mobile Vet and Grooming </h1>
-                        <p class="text-black h3 text-center">All donations will also go towards buying a mobile vet so this homeless pets can also enjoy adequate healthcare because this shouldn’t be a luxury ,but a basic requirement for their wellness. </p>
+                        <h1 class="text-black mt-30 green my-text font-weight-bold text-uppercase"> Proposed Mobile Vet & Grooming Station</h1>
+                        <p class="text-black h3 text-center">All donations will also go towards buying a mobile vet so this homeless pets can also enjoy adequate healthcare because this shouldn’t be a luxury, but a basic requirement for their wellness. Homeless pets deserve a bath too.</p>
 
                     </div>
                 </div>
@@ -184,8 +184,8 @@
                 <div class="card ">
                     <img src="img/new-bus-3.jpg " class="card-img-top " alt="... ">
                     <div class="card-body ">
-                        <h1 class="text-black mt-30 green my-text font-weight-bold ">Proposed Food Truck </h1>
-                        <p class="text-black h3 text-center ">Your donations will help buy this food truck to enable paw salvation access more homeless people.</p>
+                        <h1 class="text-black mt-30 green my-text font-weight-bold ">PROJECT IGNITE</h1>
+                        <p class="text-black h3 text-center ">We are dedicated to this project . Being homeless is bad enough. We are committed to making each new day beautiful for the homeless and their furry companion. A chance for a better tomorrow.</p>
                     </div>
                 </div>
             </div>
