style word spacing

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center mx-auto">
-                        <p class="text-black test"><span style="word-spacing: -6px;">Compassion for our four legged heroes is all we ask.</span></p>
+                        <p class="text-black test"><span class="word-spacing">Compassion for our four legged heroes is all we ask.</span></p>
 
                         <br>
                         <p class="text-black h3" style="line-height: 2;"> Being homeless is psychologically stressful, But going through it with a furry companion gives HOPE... let’s help preserve the only companionship these homeless people have. </p>
